--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.7",
+    "@editorjs/editorjs": "^2.26.5",
     "@next/font": "13.1.6",
+    "@react-icons/all-files": "^4.1.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -21,9 +23,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.5"
+    "urql": "^3.0.3"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@graphql-codegen/cli": "^3.0.0",
+    "@graphql-codegen/import-types-preset": "^2.2.6",
+    "@graphql-codegen/typescript": "^3.0.0",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^4.9.5"
   }
 }
