--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@editorjs/editorjs": "^2.26.5",
     "@next/font": "13.1.6",
     "@react-icons/all-files": "^4.1.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "date-fns": "^2.29.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "frete": "^0.4.6",
     "graphql": "^16.6.0",
     "next": "13.1.6",
     "react": "18.2.0",
