--- a/codegen.yml
+++ b/codegen.yml
@@ -2,7 +2,7 @@ overwrite: true
 
 schema: 'https://snkrs.saleor.cloud/graphql/'
 
-documents: './src/graphql/**/*.graphql'
+documents: './src/graphql/**/*.gql|graphql'
 
 generates:
   src/graphql/generated/grapgql.tsx:
