fix: adding saleor sdk & refatoring login

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 ENABLE_ACCOUNT_CONFIRMATION_BY_EMAIL=True
 ALLOWED_CLIENT_HOSTS=localhost,api
 ALLOWED_HOSTS=localhost,api
+EMAIL_URL=smtp://apikey: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@smtp.sendgrid.com:465/?ssl=True
+DEFAULT_CURRENCY=BRL
+DEFAULT_COUNTRY=BR
