--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.8",
     "@next/font": "13.1.6",
     "@react-icons/all-files": "^4.1.0",
+    "@saleor/sdk": "^0.4.4",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -20,6 +22,7 @@
     "eslint-config-next": "13.1.6",
     "frete": "^0.4.6",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
